fix: navbar issues on mobile, general themeing bugs

--- a/src/components/Navbar/Navbar.module.sass
+++ b/src/components/Navbar/Navbar.module.sass
@@ -1,4 +1,6 @@
 :global
+	.active
+		color: var(--color-blue-lighter) !important
 	.active span
 		color: var(--color-blue-lighter) !important
 	.active svg
@@ -14,7 +16,7 @@
 	overflow-x: scroll
 	overflow-y: visible
 	padding: 10px
-	background: #212121
+	background: transparent
 	scrollbar-width: none
 	-ms-overflow-style: none
 
