--- a/src/components/Overlay/Overlay.module.sass
+++ b/src/components/Overlay/Overlay.module.sass
@@ -53,7 +53,7 @@
 	left: 0
 	width: 100%
 	height: 100%
-	z-index: 6
+	z-index: 120
 	background: var(--color-backdrop)
 
 	> div:nth-of-type(1)
