--- a/src/views/components/Layout.module.sass
+++ b/src/views/components/Layout.module.sass
@@ -4,6 +4,7 @@
 	padding: 0
 	display: flex
 	justify-content: center
+	padding: 0 5px 60vh
 
 .content
 	flex-grow: 10
@@ -16,7 +17,7 @@
 .left
 	position: sticky
 	height: 100%
-
+	z-index: 10
 
 @media screen and (min-width: 768px)
 	.layout
